# 5MAssetsRenamer

./: README.md
src-cli/: CodeWalker.sln
src-cli/CodeWalker/: CodeWalker.csproj
src-cli/CodeWalker.Core/GameFiles/FileTypes/: YmfFile.cs
src-cli/CodeWalkerCLI/: AssetsRenamer.cs  CodeWalkerCLI.csproj  Program.cs
src-cli/CodeWalkerCLI/Properties/: AssemblyInfo.cs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
ui/: index.html  main.js  styles.css
