[package]
name = "assets-renamer"
version = "0.1.0"
edition = "2021"

[lib]
name = "assets_renamer"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
zip = { version = "5.1", default-features = false, features = ["deflate"] }
rfd = "0.14"

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "off"
codegen-units = 16
panic = "unwind"
